reconfigured git file tracking

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="hello">Hello World, MainActivity!</string>
     <string name="app_name">Animal Sounds</string>
 
+    <string-array name="animalFacts">
+        <item>giraffe</item>
+        <item>horse</item>
+        <item>squirrel</item>
+    </string-array>
+
 </resources>
